--- a/views/Catalog.ejs
+++ b/views/Catalog.ejs
@@ -18,7 +18,7 @@
 
 		<div class="catalog-category tab col-md-10 offset-md-1" id="framed">
 			<div class="row pb-0">
-				<div class="col-6">
+				<div class="col-md-6 p-0">
 					<h1 class="catalog-title-category">Framed prints</h1>
 					<h4>Handmade by Guild-recognised framers</h4>
 					<p>
@@ -27,9 +27,9 @@
 					</p>
 				</div>
 
-				<div class="col-6 mt-2 cat-btn-wrap">
+				<div class="col-md-6 mt-2 cat-btn-wrap">
 					<h4 class="text-center">Frames Categories</h4>
-					<div class="text-center m-3">
+					<div class="text-center m-0">
 						<button class="framed cat-btn tab-btn active" onclick="openSubCategory(this, 'box', 'framed')">Box</button>
 						<button class="framed cat-btn tab-btn" onclick="openSubCategory(this, 'classic', 'framed')">Classic</button>
 						<button class="framed cat-btn tab-btn" onclick="openSubCategory(this, 'gloss', 'framed')">Gloss</button>
@@ -43,16 +43,16 @@
 				<div class="catalog-subcategory framed sub-toggle" id="box">
 					<h1 class="catalog-title-category">Box Frame</h1>
 					<h4>A modern design adding depth to your pictures</h4>
-					<p class="col-8 pl-0">
+					<p class="col-md-8 pl-0">
 						Our <b>box frame</b> is milled from solid ash, hand-stained by our team and finished with a specialist wax to accentuate the grain. <br />
 						The frame has a <b>box profile</b> measuring <b>20mm</b> (front face) by <b>33mm</b> (depth from wall). Available in <b>black, white, brown or natural.</b>
 					</p>
 
 					<div class="row">
-						<div class="col-6 text-center mt-5">
+						<div class="col-md-6 text-center mt-5">
 							<img src="/img/framed-box-cut.png" />
 						</div>
-						<div class="col-6">
+						<div class="col-md-6 p-0">
 							<h4>Highlights</h4>
 							<ul>
 								<li>Classic deep frame</li>
@@ -95,7 +95,6 @@
 					<div class="text-center w-100"><b>Invisible low-reflective museum glass versus standard float glass</b></div>
 
 					<h4>Paper Types</h4>
-
 					<div class="row">
 						<div class="catalog-substrate-item col-6">
 							<img class="w-100" src="/img/fine-art-1.jpg" />
@@ -107,7 +106,6 @@
 
 						<div class="catalog-substrate-item col-6">
 							<img class="w-100" src="/img/fine-art-2.jpg" />
-
 							<p>
 								<b>Enhanced Matte Art</b><br />
 								A <b>premium-quality</b> heavyweight fine art print material with a <b>smooth, clean finish.</b> This museum-quality paper is <b>extremely consistent</b> and works perfectly with
@@ -170,17 +168,17 @@
 				<div class="catalog-subcategory framed sub-toggle" id="classic" style="display: none;">
 					<h1 class="catalog-title-category">Classic Frame</h1>
 					<h4>Our most popular picture frame</h4>
-					<p class="col-8 pl-0">
+					<p class="col-md-8 pl-0">
 						Created from <b>high-quality wood</b>, milled with simple clean lines and presented with a <b>satin finish.</b><br />
 						This frame has a square profile measuring <b>20mm</b> (front face) by <b>23mm</b> (depth from wall). Available in <b>black, white, brown, silver, gold or natural.</b>
 					</p>
 
 					<div class="row">
-						<div class="col-6 text-center mt-5">
+						<div class="col-md-6 text-center mt-5">
 							<img src="/img/framed-cla-cut.png" />
 						</div>
 
-						<div class="col-6">
+						<div class="col-md-6 p-0">
 							<h4>Highlights</h4>
 							<ul>
 								<li>Eternally popular simple, elegant design</li>
@@ -222,7 +220,6 @@
 					<div class="text-center w-100"><b>Invisible low-reflective museum glass versus standard float glass</b></div>
 
 					<h4>Paper Types</h4>
-
 					<div class="row">
 						<div class="catalog-substrate-item col-6">
 							<img class="w-100" src="/img/fine-art-1.jpg" />
@@ -289,17 +286,17 @@
 				<div class="catalog-subcategory framed sub-toggle" id="gloss" style="display: none;">
 					<h1 class="catalog-title-category">Gloss Frame</h1>
 					<h4>Full-bleed pictures with a thin stylish profile</h4>
-					<p class="col-8 pl-0">
+					<p class="col-md-8 pl-0">
 						The Gloss frame has a <b>high-shine, lacquered finish</b> creating a highly sophisticated look. <br />The profile has a <b>subtle curve</b> and measures <b>39mm</b> wide (front face) by
 						<b>25mm</b> deep (depth from wall). Available in <b>black</b> or <b>white.</b>
 					</p>
 
 					<div class="row">
-						<div class="col-6 text-center mt-5">
+						<div class="col-md-6 text-center mt-5">
 							<img src="/img/framed-glo-cut.png" />
 						</div>
 
-						<div class="col-6">
+						<div class="col-md-6 p-0">
 							<h4>Highlights</h4>
 							<ul>
 								<li>High-quality finish suited to luxury interiors</li>
@@ -391,17 +388,17 @@
 				<div class="catalog-subcategory framed sub-toggle" id="spacer" style="display: none;">
 					<h1 class="catalog-title-category">Spacer Frame</h1>
 					<h4>A contemporary twist on the traditional box frame</h4>
-					<p class="col-8 pl-0">
+					<p class="col-md-8 pl-0">
 						The Spacer frame has a deep fillet to create <b>additional depth</b> for displaying artworks or photographs. Prints are typically <b>back-mounted</b>, rather than a traditional front
 						mount, creating a modern contemporary look. <br />
 						The Spacer uses our solid ash box frame which has a box profile measuring <b>20mm</b> (front face) by <b>33mm</b> (depth from wall). Available in <b>black</b> or <b>white.</b>
 					</p>
 					<div class="row">
-						<div class="col-6 text-center mt-5">
+						<div class="col-md-6 text-center mt-5">
 							<img src="/img/framed-spa-cut.png" />
 						</div>
 
-						<div class="col-6">
+						<div class="col-md-6 p-0">
 							<h4>Highlights</h4>
 							<ul>
 								<li>Contemporary finish suited to back mounted prints</li>
@@ -506,17 +503,17 @@
 				<div class="catalog-subcategory framed sub-toggle" id="sur" style="display: none;">
 					<h1 class="catalog-title-category">Surface Frame</h1>
 					<h4>Full-bleed pictures with a thin stylish profile</h4>
-					<p class="col-8 pl-0">
+					<p class="col-md-8 pl-0">
 						The Surface frame provides a <b>subtle</b>, contemporary surround. The frame is <b>very thin</b>, has a <b>smooth satin texture</b> and comes <b>unglazed</b>, with the image front mounted
 						flush to the surface edge. <br />
 						Measures <b>5mm</b> wide (front face) by <b>30mm</b> or <b>50mm deep</b> (depth from wall). Available in <b>black</b> or <b>white.</b>
 					</p>
 					<div class="row">
-						<div class="col-6 text-center mt-5">
+						<div class="col-md-6 text-center mt-5">
 							<img src="/img/framed-sur-cut.png" />
 						</div>
 
-						<div class="col-6">
+						<div class="col-md-6 p-0">
 							<h4>Highlights</h4>
 							<ul>
 								<li>Exceptional value</li>
@@ -604,16 +601,16 @@
 				<div class="catalog-subcategory framed sub-toggle" id="swoop" style="display: none;">
 					<h1 class="catalog-title-category">Swoop Frame</h1>
 					<h4>Curved profile draws attention to your image</h4>
-					<p class="col-8 pl-0">
+					<p class="col-md-8 pl-0">
 						A solid <b>pine frame</b> with a <b>decorative curved profile</b> and a <b>smooth, satin finish.</b><br />The Swoop is solid, shapely and creates real impact. Measures <b>45mm</b> wide
 						(front face) by <b>32mm</b> deep (depth from wall). Available in <b>black</b> or <b>white.</b>
 					</p>
 					<div class="row">
-						<div class="col-6 text-center mt-5">
+						<div class="col-md-6 text-center mt-5">
 							<img src="/img/framed-swo-cut.png" />
 						</div>
 
-						<div class="col-6">
+						<div class="col-md-6 p-0">
 							<h4>Highlights</h4>
 							<ul>
 								<li>Flush surface mount</li>
@@ -724,15 +721,15 @@
 
 			<h4>A complete range of specialist art papers.</h4>
 
-			<p class="col-6 pl-0">
+			<p class="col-md-6 pl-0">
 				Printing is at the heart of everything we do and every product we create.<br />Each fine art print substrate is <b>individually profiled</b> for our printers, ensuring fantastically
 				<b>accurate</b> and
 				<b>consistent reproductions.</b>
 			</p>
 
-			<div class="catalog-subcategory">
-				<div class="row">
-					<div class="catalog-substrate-item col-6">
+			<div class="catalog-subcategory p-0">
+				<div class="row m-0">
+					<div class="catalog-substrate-item col-6 pl-0">
 						<h4>Budget fine art papers</h4>
 
 						<img class="w-100" src="/img/fine-art-2.jpg" />
@@ -743,7 +740,7 @@
 						</p>
 					</div>
 
-					<div class="catalog-substrate-item col-6">
+					<div class="catalog-substrate-item col-6 pr-0">
 						<h4>Premium fine art papers</h4>
 
 						<img class="w-100" src="/img/fine-art-7.jpg" />
@@ -757,39 +754,39 @@
 				</div>
 
 				<img class="w-100" src="/img/fine-art-8.jpg" />
-				<div class="text-center w-100"><b>Prodigi fine art</b></div>
+				<div class="text-center w-100"><b>Fine Art Print</b></div>
 			</div>
 		</div>
 
 		<div class="catalog-category tab col-md-10 offset-md-1" id="canvas" style="display: none;">
-			<h1 class="catalog-title-category">Canvas</h1>
-			<h4>Handmade by canvas craftsmen</h4>
-			<div class="row">
-				<p class="col-6">
+			<h1 class="catalog-title-category mt-0">Canvas</h1>
+			<h4 class="mt-0">Handmade by canvas craftsmen</h4>
+			<div class="row m-0">
+				<p class="col-sm-6">
 					Our <b>enduringly popular</b> fine art canvases transform any image into a beautiful work of art.<br />
 					Each canvas is produced using a <b>12-colour giclée</b> fine art printing process and <b>hand finished</b> by one of the UK’s most experienced canvas framing teams.
 				</p>
-				<div class="col-6 mt-2 cat-btn-wrap text-center">
+				<div class="col-sm-6 mt-0 cat-btn-wrap text-center">
 					<h4 class="text-center">Canvas Categories</h4>
 					<button class="canvas cat-btn tab-btn active" onclick="openSubCategory(this, 'framed-canvas', 'canvas')">Framed</button>
 					<button class="canvas cat-btn tab-btn" onclick="openSubCategory(this, 'stretched', 'canvas')">Stretched</button>
 				</div>
 				<hr style="margin: auto; width: 80%;" />
 
-				<div class="catalog-subcategory canvas sub-toggle" id="framed-canvas">
+				<div class="catalog-subcategory canvas sub-toggle p-0 mt-2" id="framed-canvas">
 					<h1 class="catalog-title-category">Framed Canvas</h1>
 					<h4>Transform a standard canvas into a special work of art</h4>
-					<p class="col-8 pl-0">
+					<p class="col-md-8 pl-0">
 						A <b>stretched canvas</b> comes with an <b>internal frame</b> created using specialist canvas <b>stretcher bars.</b> <br />
 						In addition, a framed canvas has a <b>traditional picture frame</b> added around the outside edge of the canvas. <br />
 						The simple addition of a <b>wooden picture frame</b> creates a completely new form of wall art; quite distinct to a standard stretched canvas.
 					</p>
 
 					<div class="row mt-3">
-						<div class="col-5 offset-1">
-							<img src="/img/canvas-framed-2.jpg" />
+						<div class="col-md-5 offset-md-1">
+							<img class="w-100" src="/img/canvas-framed-2.jpg" />
 						</div>
-						<div class="col-5 pt-5">
+						<div class="col-md-5 p-0 pt-5">
 							<div class="text-center w-100"><h3>38mm framed canvas</h3></div>
 							<p>
 								Adding a <b>solid wooden float frame</b> to our standard <b>38mm</b> canvas creates a unique and original work of art. The <b>thin</b> frame sits approximately <b>5mm</b> from the edge
@@ -798,8 +795,8 @@
 						</div>
 					</div>
 
-					<h4 class="mt-5">Canvas Material</h4>
-					<p class="col-8 pl-0">
+					<h4 class="mt-3">Canvas Material</h4>
+					<p class="col-md-8 pl-0">
 						Our canvas is a <b>finely textured</b> artist-grade <b>cotton substrate</b> which consistently reproduces image details with outstanding <b>clarity and detail.</b> <br />Our most popular
 						canvas and superior to many more expensive branded alternatives.
 					</p>
@@ -817,7 +814,7 @@
 					<div class="text-center w-100"><b>The "floating border" created by the frame sits approximately 5mm from the canvas edge</b></div>
 				</div>
 
-				<div class="catalog-subcategory canvas sub-toggle" id="stretched" style="display: none;">
+				<div class="catalog-subcategory canvas sub-toggle p-0 mt-2" id="stretched" style="display: none;">
 					<h1 class="catalog-title-category">Stretched Canvas</h1>
 					<h4>Superior canvas prints designed for trade and retail</h4>
 					<p>
@@ -843,12 +840,12 @@
 						The thickness of your canvas stretcher bar determines how far the canvas print will stand off the wall.
 					</p>
 					<div class="row">
-						<div class="col-6">
-							<img src="/img/canvas-stretched-2.jpg" />
+						<div class="col-md-6">
+							<img class="w-100" src="/img/canvas-stretched-2.jpg" />
 							<b>38mm</b>
 						</div>
 
-						<p class="col-6 mt-5">
+						<p class="col-md-6 mt-5">
 							Each canvas frame is milled with a <b>curved profile</b>; minimising contact with the face of the canvas; preventing unsightly impression marks and surface cracking. <br />
 							We use <b>finger-jointed</b> canvas frames which create corner tension helping <b>resist warping.</b> <br />
 							For larger sizes, we add wooden 'wedges' to each corner; <b>ensuring the canvas surface remains taut</b> and allowing easy re-stretching in future years.
@@ -856,7 +853,7 @@
 					</div>
 
 					<h4>Canvas Material</h4>
-					<p class="col-8 pl-0">
+					<p class="col-md-8 pl-0">
 						Our canvas is a <b>finely textured</b> artist-grade <b>cotton substrate</b> which consistently reproduces image details with outstanding <b>clarity and detail.</b> <br />Our most popular
 						canvas and superior to many more expensive branded alternatives.
 					</p>
@@ -864,24 +861,24 @@
 					<h4 class="mb-1">Canvas finishes</h4>
 					<b>A choice of edge profile</b>
 
-					<div class="row">
-						<div class="col-4 offset-2 text-center">
-							<img src="/img/canvas-stretched-4.jpg" />
+					<div class="row mt-2">
+						<div class="col-lg-4 offset-lg-2 col-6 text-center">
+							<img class="w-100" src="/img/canvas-stretched-4.jpg" />
 							<div class="text-center w-100"><b>White edge Also called museum wrap.</b></div>
 						</div>
 
-						<div class="col-4 text-center">
-							<img src="/img/canvas-stretched-5.jpg" />
+						<div class="col-lg-4 col-6 text-center">
+							<img class="w-100" src="/img/canvas-stretched-5.jpg" />
 							<div class="text-center w-100"><b>Black edge</b></div>
 						</div>
 
-						<div class="col-4 offset-2 text-center">
-							<img src="/img/canvas-stretched-6.jpg" />
+						<div class="col-lg-4 offset-lg-2 col-6 text-center">
+							<img class="w-100" src="/img/canvas-stretched-6.jpg" />
 							<div class="text-center w-100"><b>Image wrap Image wraps around the sides of the frame.</b></div>
 						</div>
 
-						<div class="col-4 text-center">
-							<img src="/img/canvas-stretched-7.jpg" />
+						<div class="col-lg-4 col-6 text-center">
+							<img class="w-100" src="/img/canvas-stretched-7.jpg" />
 							<div class="text-center w-100"><b>Mirror wrap Image edge reflected on the sides; entire image appears on the front.</b></div>
 						</div>
 					</div>
@@ -889,7 +886,7 @@
 					<h4 class="mb-1">Canvas coatings</h4>
 					<b>Preserve the integrity of your print</b>
 
-					<p class="col-8 pl-0">
+					<p class="col-md-8 pl-0">
 						All our canvas prints can be finished with a <b>matt</b> or <b>gloss varnish coating.</b> <br />
 						Varnishes help to <b>preserve the integrity</b> of your canvas image, protecting against airborne <b>dirt/dust, sun fade, abrasions and fingerprints</b>
 					</p>
@@ -923,7 +920,7 @@
 <script>
 	function openTab(btn, tabName) {
 		let tab = document.getElementsByClassName("tab");
-		let buttons = document.getElementsByClassName("tab-btn");
+		let buttons = document.querySelectorAll(".catalog-wrapper .tab-btn");
 
 		for (let i = 0; i < buttons.length; i++) buttons[i].classList.remove("active");
 
