renamed file and route

--- a/views/About.ejs
+++ b/views/About.ejs
@@ -19,7 +19,7 @@
 						<i class="fas fa-envelope mr-2"></i> <span>Contact</span> <i class="fas fa-chevron-right chev"></i></a>
 				</li>
 				<li>
-					<a href="/CGU" class="menu-link"><i class="fa fa-gavel mr-2"></i> <span>Legal</span> <i class="fas fa-chevron-right chev"></i></a>
+					<a href="/Legals" class="menu-link"><i class="fa fa-gavel mr-2"></i> <span>Legal</span> <i class="fas fa-chevron-right chev"></i></a>
 				</li>
 			</ul>
 
