--- a/views/legals.ejs
+++ b/views/legals.ejs
@@ -93,7 +93,7 @@
 				Aucune information personnelle de l'utilisateur du site maral.fr n'est publiée à l'insu de l'utilisateur, échangée, transférée, cédée ou vendue sur un support quelconque à des tiers. Seule
 				l'hypothèse du rachat du site maral.fr et de ses droits autorise Seyrene Hagiakian à transmettre les dites informations à l'éventuel acquéreur qui serait à son tour tenu à la même obligation
 				de conservation et de modification des données vis à vis de l'utilisateur du site maral.fr.<br />
-				Le site maral.fr est en conformité avec le RGPD voir notre politique RGPD  https://maral.fr/cgu.
+				Le site maral.fr est en conformité avec le RGPD voir notre politique RGPD  https://maral.fr/legals.
 			</p>
 
 			<p style="text-align: justify;">
