--- a/views/Billing.ejs
+++ b/views/Billing.ejs
@@ -57,7 +57,7 @@
 					<div class="row">
 						<div class="col-md-12 text-center">
 							<label class="control-label col-md-12 text-center">
-								By checking this box I hereby declare that I have read and agree to the <a href="/CGU#tos">Terms of Service</a> and <a href="/CGU#sales">Terms of Sales</a>
+								By checking this box I hereby declare that I have read and agree to the <a href="/Legals#tos">Terms of Service</a> and <a href="/Legals#sales">Terms of Sales</a>
 							</label>
 							<input type="checkbox" name="agree_tos" id="agree_tos" required />
 						</div>
