added new endpoint and pages so that admin can change biography image

--- a/views/About.ejs
+++ b/views/About.ejs
@@ -113,7 +113,7 @@
 			<div class="biography col-md-10 offset-md-1 wrapper pb-0 pt-4">
 					<div class="bio-img-wrapper col-sm-4" style="z-index: 0; ">
 						<div class="sub-img-wrapper">
-						<img class="bio-img w-100" src="/img/biopic.png" />
+						<img class="bio-img w-100" src="/img/upload/biopic.png" />
 						</div>
 					</div>
 					<div class="first-bio col-sm-8">
