--- a/views/restricted/Admin.ejs
+++ b/views/restricted/Admin.ejs
@@ -8,6 +8,7 @@
             <a class="admin-section-block col-lg-3" href="/Admin/Shop/Post">Shop</a class="admin-section-block col-3">
             <a class="admin-section-block col-lg-3" href="/Admin/Blog/Post">Blog</a class="admin-section-block col-3">
             <a class="admin-section-block col-lg-3" href="/Admin/Front">Home</a class="admin-section-block col-3">
+            <a class="admin-section-block col-lg-3" href="/Admin/Bio">Bio</a class="admin-section-block col-3">
         </div>
     </div>
 </div>
