--- a/views/legals.ejs
+++ b/views/legals.ejs
@@ -100,8 +100,15 @@
 				Les bases de données sont protégées par les dispositions de la loi du 1er juillet 1998 transposant la directive 96/9 du 11 mars 1996 relative à la protection juridique des bases de données.
 			</p>
 
+			<strong>7. E-mails :</strong><br />
+
+			<p style="text-align: justify;">
+				Les addresses e-mail collectées lors de la création de compte serviront uniquement dans le but de vous informer sur vos commandes et/ou pour les opérations de récupération et/ou de validation
+				de compte.
+			</p>
+
 			<hr />
-			<h1 class="single-title text-center">Politique de confidentialité (standard RGPD)</h1>
+			<h1 class="single-title text-center" id="RGPD">Politique de confidentialité (standard RGPD)</h1>
 			<h3>Sécurité et protection des données personnelles</h3>
 			<h4>Avertissements</h4>
 			<p>
