--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <footer>
   <div class="footer-copyright text-center">
-    <p class="mb-0 p-1">© 2020 Copyright Maral - Developed by <a id="ablin" href="https://github.com/ablin42"> @ablin42</a></p>
+    <p class="mb-0 p-1">© 2020 Copyright Maral - <a href="/Legals#tos">Terms of Use</a> - Developed by <a id="ablin" href="https://github.com/ablin42"> @ablin42</a></p>
   </div>
 </footer>
 </body>
